@@ -1,3 +1,15 @@
+2009-12-17  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Reviewed by Xan Lopez.
+
+        More make distcheck fixes. Use a more robust solution to making
+        sure we are in the correct directory for running these tests.
+
+        * tests/testmimehandling.c:
+        (main):
+        * tests/testwebview.c:
+        (main):
+
 2009-12-17  Christian Dywan  <christian@twotoasts.de>
 
         Reviewed by Gustavo Noronha Silva.
